# nezumi

./: .gitattributes  CMakeLists.txt  README.md
cmake/: config.cmake  macros.cmake
source/runtime/: CMakeLists.txt
source/runtime/include/runtime/: color.hpp  filesystem.hpp  game.hpp  math.hpp  render.hpp  system.hpp  timer.hpp  window.hpp
source/runtime/source/runtime/: game.cpp  system.cpp
source/runtime/source/runtime/filesystem/none/: filesystem.none.cpp
source/runtime/source/runtime/filesystem/win32/: filesystem.win32.cpp
source/runtime/source/runtime/render/: render.internal.cpp  render.internal.hpp
source/runtime/source/runtime/render/d3d11/: render.d3d11.cpp  render.d3d11.hpp
source/runtime/source/runtime/render/none/: render.none.cpp
source/runtime/source/runtime/timer/: timer.internal.cpp  timer.internal.hpp
source/runtime/source/runtime/timer/none/: timer.none.cpp
source/runtime/source/runtime/timer/sdl2/: timer.sdl2.cpp
source/runtime/source/runtime/timer/win32/: timer.win32.cpp
source/runtime/source/runtime/window/: window.internal.cpp  window.internal.hpp
source/runtime/source/runtime/window/none/: window.none.cpp
source/runtime/source/runtime/window/sdl2/: window.sdl2.cpp
source/runtime/source/runtime/window/win32/: window.win32.cpp
source/sample/: CMakeLists.txt
source/sample/source/: main.cpp
